--- a/lab1/index.html
+++ b/lab1/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="search">
             <input type="text" placeholder="Enter City Name" id="search-txt">
-            <button id="search-btn">Поиск</button>
+            <button id="search-btn">Find</button>
         </div>
     </header>
 
